--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,8 @@ plugins:
     - git-revision-date
     - mkdocs-jupyter:
           include_source: True
+          execute: True
           #   ignore_h1_titles: True
-          #   execute: True
           #   execute_ignore: "*.ipynb"
 
 markdown_extensions:
