--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: geosdemo
 
-site_url: https://giswqs.github.io/geosdemo
+site_url: https://geosdemo.gishub.org
 
 repo_url: https://github.com/giswqs/geosdemo
 
