--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,3 +63,4 @@ nav:
           - python/10_files_and_exceptions.ipynb
     - Assignments:
           - labs/lab4.ipynb
+          - labs/lab5.ipynb
