Add notebook to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,8 @@ nav:
     - FAQ: faq.md
     - Changelog: changelog.md
     - Report Issues: https://github.com/giswqs/geosdemo/issues
+    - Examples:
+          - examples/intro.ipynb
     - API Reference:
           - geosdemo module: geosdemo.md
     - Python Basics:
